// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge / appearance default 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-vdc22r=""
      >
        default
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-jh132n=""
      >
        default
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-1q8b1lc=""
      >
        default
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-17te2fi=""
      >
        default
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-1d3h730=""
      >
        default
         
        blue
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Badge / appearance stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-18uz01l=""
      >
        stroke
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-1ijjyd4=""
      >
        stroke
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-10iae72=""
      >
        stroke
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-1en6ax5=""
      >
        stroke
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-1nf2brk=""
      >
        stroke
         
        blue
      </div>
    </div>
  </div>
</div>
`;
